<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ServerActivity" >

    <ImageView
        android:id="@+id/wifiStatus"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/wifi_off" 
        android:contentDescription="@string/wifi_status_description" />

    <TextView
        android:id="@+id/SSIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnOpen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hotspot_btn_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/btnOpenLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_open"
        android:contentDescription="@string/open_btn_description"
        android:enabled="false" />

    <TextView
        android:id="@+id/btnOpenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/open_btn_label"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>