<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/songTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/songArtistLabel"
        android:layout_alignLeft="@+id/songAlbumLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/title_label" />

    <TextView
        android:id="@+id/songAlbumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/songArtistLabel"
        android:layout_marginBottom="12dp"
        android:text="@string/album_label" />

    <TextView
        android:id="@+id/songArtistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/songAlbumLabel"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/artist_label" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/songTitleLabel"
        android:layout_alignBottom="@+id/songTitleLabel"
        android:layout_toRightOf="@+id/songArtistLabel"
        android:text="@string/empty_metadata" />

    <TextView
        android:id="@+id/songAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/songArtist"
        android:layout_below="@+id/songArtistLabel"
        android:text="@string/empty_metadata" />

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/songArtistLabel"
        android:layout_alignBottom="@+id/songArtistLabel"
        android:layout_alignLeft="@+id/songTitle"
        android:text="@string/empty_metadata" />

    <ImageView
        android:id="@+id/clientArtwork"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/artwork_description"
        android:src="@drawable/default_artwork" />

</RelativeLayout>
